[package]
name = "wgpu-project"
version = "0.1.0"
authors = ["timokoesters <timo@koesters.xyz>"]
edition = "2018"

[features]
default = ["wgpu/vulkan"]

[dependencies]
winit = "0.20.0-alpha3"
log = "0.4.8"
wgpu = "0.3.0"
glsl-to-spirv = "0.1.7"
cgmath = "0.17.0"
env_logger = "0.6.2"
raw-window-handle = "0.1.2"
